@@ -1,79 +1,76 @@
 nav {
-  font-family: Helvetica, Arial;
-  font-size: 10pt;
-  line-height: 1;
-  margin: 10px auto;
-  padding: 0;
-  width: 254px;
+	font-family: Helvetica, Arial;
+	font-size: 10pt;
+	line-height: 1;
+	margin: 10px auto;
+	padding: 0;
+	width: 254px;
 }
 
 .menu-item {
-  background: #FCFCFC;
-  width: 254px;
+	background: #FCFCFC;
+	width: 254px;
 }
 
 /*Menu Header Styles*/
 .menu-item h4 {
-  border-bottom: 1px solid rgba(0,0,0,0.3);
-  border-top: 1px solid rgba(255,255,255,0.2);
-  color: #FFF;
-  background: #2980B9; /* Old browsers */
-  font-size: 12pt;
-  font-family: Helvetica, Arial;
-  padding: 7px 12px;
-  
+	/* border-bottom: 1px solid rgba(0,0,0,0.3); */
+	/* border-top: 1px solid rgba(255,255,255,0.2); */
+	color: #FFF;
+	background: #2980B9; /* Old browsers */
+	font-size: 12pt;
+	font-family: Helvetica, Arial;
+	padding: 7px 12px;
 }
 
-.menu-item h4:hover {  
-  /* background: #2980B9; */ /* Old browsers */
-
+.menu-item h4:hover {
+	/* background: #2980B9; */ /* Old browsers */
 }
 
 .menu-item h4 a {
-  color: #FFF;
-  display: block;
-  text-decoration: none;
-  width: 254px;
+	color: #FFF;
+	display: block;
+	text-decoration: none;
+	width: 254px;
 }
 
 /*ul Styles*/
 .menu-item ul {
-  background: #FCFCFC;
-  font-size: 10pt;
-  line-height: 22px;
-  height: 0;
-  list-style-type: none;
-  overflow: hidden;
-  padding: 0px;
-  
-  /*Animation*/
-  -webkit-transition: height 1s ease;
-     -moz-transition: height 1s ease;
-       -o-transition: height 1s ease;
-      -ms-transition: height 1s ease;
-          transition: height 1s ease;
+	background: #FCFCFC;
+	font-size: 10pt;
+	line-height: 22px;
+	height: 0;
+	list-style-type: none;
+	overflow: hidden;
+	padding: 0px;
+
+	/*Animation*/
+	-webkit-transition: height 1s ease;
+	-moz-transition: height 1s ease;
+	-o-transition: height 1s ease;
+	-ms-transition: height 1s ease;
+	transition: height 1s ease;
 }
 
-
 .menu-item:hover ul {
-  height: 220px;
+	height: 220px;
 }
 
 .menu-item ul a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: #AAA;
-  display: block;
-  width: 240px;
+	margin-left: 20px;
+	text-decoration: none;
+	color: #AAA;
+	display: block;
+	width: 240px;
 }
 
 /*li Styles*/
 .menu-item li {
-  border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #eee;
 }
 
 .menu-item li:hover {
-  background: #eee;
+	background: #eee;
 }
 
 /*First Item Styles*/
